@@ -11,8 +11,8 @@ import com.ryandw11.structure.listener.ChunkLoad;
 import com.ryandw11.structure.listener.LootProtect;
 import com.ryandw11.structure.listener.PlayerInteract;
 import com.ryandw11.structure.listener.PlayerJoin;
-import com.ryandw11.structure.loottables.LootTablesHandler;
 import com.ryandw11.structure.loottables.ComplexItemManager;
+import com.ryandw11.structure.loottables.LootTableHandler;
 import com.ryandw11.structure.loottables.PluginItemRegistry;
 import com.ryandw11.structure.loottables.pluginitems.InteractiveBooksPluginItem;
 import com.ryandw11.structure.loottables.pluginitems.ItemsAdderPluginItem;
@@ -20,8 +20,9 @@ import com.ryandw11.structure.loottables.pluginitems.MMOItemsPluginItem;
 import com.ryandw11.structure.mythicalmobs.MMDisabled;
 import com.ryandw11.structure.mythicalmobs.MMEnabled;
 import com.ryandw11.structure.mythicalmobs.MythicalMobHook;
+import com.ryandw11.structure.schematic.StructureSignHandler;
 import com.ryandw11.structure.structure.StructureHandler;
-import com.ryandw11.structure.utils.SpawnYConversion;
+import com.ryandw11.structure.utils.CSUtils;
 import me.clip.placeholderapi.PlaceholderAPI;
 import org.apache.commons.io.FileUtils;
 import org.bstats.bukkit.Metrics;
@@ -42,15 +43,27 @@ import java.util.*;
 /**
  * The main class for the Custom Structures plugin.
  *
+ * <p>Use {@link #getInstance()} to get the instance of the main class.</p>
+ *
  * @author Ryandw11
- * @version 1.8.1
+ * @version 1.9.1
  */
 
 public class CustomStructures extends JavaPlugin {
 
+    /**
+     * The instance of the CustomStructures plugin.
+     *
+     * <p>Use {@link #getInstance()} instead.</p>
+     */
     public static CustomStructures plugin;
-    public File lootTableFile = new File(getDataFolder() + "/lootTables/demo.yml");
-    public FileConfiguration lootTablesFC = YamlConfiguration.loadConfiguration(lootTableFile);
+    /**
+     * Whether the plugin is enabled.
+     */
+    public static boolean enabled;
+
+    private final File lootTableFile = new File(getDataFolder() + "/lootTables/demo.yml");
+    private final FileConfiguration lootTablesFC = YamlConfiguration.loadConfiguration(lootTableFile);
 
     private MythicalMobHook mythicalMobHook;
     private CitizensNpcHook citizensNpcHook;
@@ -58,16 +71,17 @@ public class CustomStructures extends JavaPlugin {
     private SignCommandsHandler signCommandsHandler;
     private NpcHandler npcHandler;
     private StructureHandler structureHandler;
-    private LootTablesHandler lootTablesHandler;
+    private LootTableHandler lootTableHandler;
     private ComplexItemManager complexItemManager;
     private IgnoreBlocks blockIgnoreManager;
     private AddonHandler addonHandler;
+    private StructureSignHandler structureSignHandler;
 
     private Metrics metrics;
 
     private boolean debugMode;
 
-    public static boolean enabled;
+    private boolean initialized = false;
 
     /**
      * The current version of the compiled structure format.
@@ -77,7 +91,7 @@ public class CustomStructures extends JavaPlugin {
     /**
      * The current version of the structure configuration format.
      */
-    public static final int CONFIG_VERSION = 8;
+    public static final int CONFIG_VERSION = 9;
 
     private static boolean papiEnabled = false;
 
@@ -120,7 +134,7 @@ public class CustomStructures extends JavaPlugin {
         debugMode = getConfig().getBoolean("debug");
 
         if (getConfig().getInt("configversion") < CONFIG_VERSION) {
-            this.lootTablesHandler = new LootTablesHandler();
+            this.lootTableHandler = new LootTableHandler();
             updateConfig(getConfig().getInt("configversion"));
         }
 
@@ -139,33 +153,12 @@ public class CustomStructures extends JavaPlugin {
         this.complexItemManager = new ComplexItemManager(this, new File(getDataFolder() + File.separator + "internal" + File.separator + "complexitems.yml"), new File(getDataFolder() + File.separator + "internal"));
         this.signCommandsHandler = new SignCommandsHandler(getDataFolder(), this);
         this.npcHandler = new NpcHandler(getDataFolder(), plugin);
-        this.lootTablesHandler = new LootTablesHandler();
+        this.lootTableHandler = new LootTableHandler();
         this.addonHandler = new AddonHandler();
+        this.structureSignHandler = new StructureSignHandler();
 
         // Run this after the loading of all plugins.
-        Bukkit.getScheduler().scheduleSyncDelayedTask(this, () -> {
-            if (getConfig().getInt("configversion") != CONFIG_VERSION) {
-                Bukkit.getConsoleSender().sendMessage(ChatColor.RED + "[CustomStructures] Cannot enable plugin, your config version is outdated. " +
-                                                      "Check the above for errors that may have occurred during the auto-update process." + ChatColor.RESET);
-                return;
-            }
-
-            this.structureHandler = new StructureHandler(getConfig().getStringList("Structures"), this);
-            getLogger().info("The plugin has been fully enabled with " + structureHandler.getStructures().size() + " structures.");
-            getLogger().info(addonHandler.getCustomStructureAddons().size() + " addons were found.");
-
-            if (metrics != null) {
-                // Add a custom pie chart to track the addons used.
-                metrics.addCustomChart(new AdvancedPie("used_addons", () -> {
-                    Map<String, Integer> valueMap = new HashMap<>();
-                    for (CustomStructureAddon addon : addonHandler.getCustomStructureAddons()) {
-                        valueMap.put(addon.getName(), 1);
-                    }
-                    return valueMap;
-                }));
-            }
-
-        }, 30);
+        Bukkit.getScheduler().scheduleSyncDelayedTask(this, this::initialize, 30);
 
 
         if (getConfig().getBoolean("bstats")) {
@@ -175,6 +168,36 @@ public class CustomStructures extends JavaPlugin {
         } else {
             getLogger().info("Bstat metrics is disabled for this plugin.");
         }
+    }
+
+    /**
+     * Initializes the plugin by creating the {@link StructureHandler}.
+     *
+     * <p>This is called internally after all plugins are initialized.</p>
+     */
+    public void initialize() {
+        if (initialized) return;
+
+        if (getConfig().getInt("configversion") != CONFIG_VERSION) {
+            Bukkit.getConsoleSender().sendMessage(ChatColor.RED + "[CustomStructures] Cannot enable plugin, your config version is outdated. Check the above for errors that may have occurred during the auto-update process." + ChatColor.RESET);
+            return;
+        }
+
+        this.structureHandler = new StructureHandler(getConfig().getStringList("structures"), this);
+        getLogger().info("The plugin has been fully enabled with " + structureHandler.getStructures().size() + " structures.");
+        getLogger().info(addonHandler.getCustomStructureAddons().size() + " addons were found.");
+
+        if (metrics != null) {
+            // Add a custom pie chart to track the addons used.
+            metrics.addCustomChart(new AdvancedPie("used_addons", () -> {
+                Map<String, Integer> valueMap = new HashMap<>();
+                for (CustomStructureAddon addon : addonHandler.getCustomStructureAddons()) {
+                    valueMap.put(addon.getName(), 1);
+                }
+                return valueMap;
+            }));
+        }
+        initialized = true;
     }
 
     /**
@@ -234,12 +257,13 @@ public class CustomStructures extends JavaPlugin {
 
         // Initialize blockIgnoreManager with the proper class for the version.
         switch (version) {
+            case "v1_19_R1", "v1_19_R2", "v1_19_R3", "v1_19_R4" -> blockIgnoreManager = new IgnoreBlocks_1_19();
             case "v1_18_R2", "v1_18_R1", "v1_17_R1" -> blockIgnoreManager = new IgnoreBlocks_1_17();
             case "v1_16_R3", "v1_16_R2", "v1_16_R1" -> blockIgnoreManager = new IgnoreBlocks_1_16();
             case "v1_15_R1" -> blockIgnoreManager = new IgnoreBlocks_1_15();
             case "v1_14_R1" -> blockIgnoreManager = new IgnoreBlocks_1_14();
             case "v1_13_R1" -> blockIgnoreManager = new IgnoreBlocks_1_13();
-            default -> blockIgnoreManager = new IgnoreBlocks_1_19();
+            default -> blockIgnoreManager = new IgnoreBlocks_1_20();
         }
     }
 
@@ -268,8 +292,8 @@ public class CustomStructures extends JavaPlugin {
      *
      * @return The loot table handler.
      */
-    public LootTablesHandler getLootTableHandler() {
-        return lootTablesHandler;
+    public LootTableHandler getLootTableHandler() {
+        return lootTableHandler;
     }
 
     /**
@@ -282,9 +306,12 @@ public class CustomStructures extends JavaPlugin {
         this.npcHandler.cleanUp();
         this.npcHandler = new NpcHandler(getDataFolder(), plugin);
         this.structureHandler.cleanup();
-        this.structureHandler = new StructureHandler(getConfig().getStringList("Structures"), this);
-        this.lootTablesHandler = new LootTablesHandler();
+        this.structureHandler = new StructureHandler(getConfig().getStringList("structures"), this);
+        this.lootTableHandler = new LootTableHandler();
         this.complexItemManager = new ComplexItemManager(this, new File(getDataFolder() + File.separator + "internal" + File.separator + "complexitems.yml"), new File(getDataFolder() + File.separator + "internal"));
+
+        // Update the addons.
+        this.addonHandler.handlePluginReload();
     }
 
     /**
@@ -365,6 +392,7 @@ public class CustomStructures extends JavaPlugin {
     private void updateConfig(int ver) {
         getLogger().info("An older version of the plugin has been detected!");
         getLogger().info("Automatically converting old format into the new one.");
+
         // Update to new structure format.
         if (ver < 5) {
             getLogger().severe("Error: Your config is too old for the plugin to update.");
@@ -373,135 +401,15 @@ public class CustomStructures extends JavaPlugin {
             getServer().getPluginManager().disablePlugin(this);
             return;
         }
+
         // Update to new loot table format.
-        if (ver < 6) {
+        if (ver < 7) {
             getLogger().severe("Error: Your config is too old for the plugin to update.");
-            getLogger().severe("Please use custom structures 1.8.0 or older before updating to the latest version.");
-            getLogger().severe("The plugin will now disable itself.");
+            getLogger().severe("Please consult the plugin wiki to see what version to use to update your configuration files.");
             getServer().getPluginManager().disablePlugin(this);
             return;
         }
-        if (ver < 7) {
-            getLogger().info("Updating all structure config files...");
 
-            File structDir = new File(getDataFolder(), "structures");
-            if (!structDir.exists() && !structDir.isDirectory()) {
-                getLogger().severe("An error occurred when trying to update the structure format: Unable to find structure directory! Does it exist?");
-                return;
-            }
-
-            File backupDirectory = new File(getDataFolder(), "backup");
-            File backupdata = new File(backupDirectory, ".backups");
-            if (!backupDirectory.exists()) {
-                if (!backupDirectory.mkdir()) {
-                    getLogger().severe("Error: Unable to create backup directory!");
-                    return;
-                }
-            }
-
-            if (!backupdata.exists()) {
-                try {
-                    backupdata.createNewFile();
-                } catch (IOException ex) {
-                    getLogger().severe("Error: Unable to create backup file.");
-                    return;
-                }
-            }
-
-            FileConfiguration fileConfiguration = YamlConfiguration.loadConfiguration(backupdata);
-
-            if (fileConfiguration.contains("backupVer")) {
-                int backupVer = fileConfiguration.getInt("backupVer");
-                if (backupVer != 7) {
-                    Bukkit.getConsoleSender().sendMessage(ChatColor.RED + "===============[CUSTOM STRUCTURES UPDATE]===============" + ChatColor.RESET);
-                    getLogger().severe("Unable to update plugin! Backup data is outdated!");
-                    getLogger().severe("Please delete the backup folder in the CustomStructures directory before continuing!");
-                    Bukkit.getConsoleSender().sendMessage(ChatColor.RED + "===============[CUSTOM STRUCTURES UPDATE]===============" + ChatColor.RESET);
-                    return;
-                }
-            } else {
-                fileConfiguration.set("backupVer", 7);
-                try {
-                    fileConfiguration.save(backupdata);
-                } catch (IOException ex) {
-                    getLogger().severe("A critical error has occurred while backing up the plugin data.");
-                    return;
-                }
-            }
-
-            List<String> updatedStructures = new ArrayList<>(fileConfiguration.getStringList("UpdatedStructures"));
-
-            // This detects if there are any loaded structures, and alerts the user if this is an error.
-            if (!updatedStructures.isEmpty()) {
-                getLogger().info("Previous update attempt detected.");
-                getLogger().info(String.format("%s completed structure updates were found. If this is your first time updating" +
-                                               " to this version of CustomStructures, then please delete the backup directory and restart the server.",
-                        updatedStructures.size()));
-                getLogger().info("The server will now wait 5 seconds to give you a chance to stop the server before " +
-                                 "the update automatically continues. Press ctrl+c to cancel running the server.");
-                try {
-                    Thread.sleep(5000);
-                } catch (InterruptedException ex) {
-                    getLogger().info("Server shutdown detected. Stopping update.");
-                    return;
-                }
-            }
-
-            createBackupForFile("config.yml", "/backup/config.yml.backup");
-            for (String s : getConfig().getStringList("Structures")) {
-                if (updatedStructures.contains(s)) continue;
-
-                try {
-                    createBackupForFile("/structures/" + s + ".yml", "/backup/" + s + ".yml.backup");
-
-                    FileConfiguration structConfig = YamlConfiguration.loadConfiguration(new File(structDir, s + ".yml"));
-
-                    if (!structConfig.contains("StructureLocation.SpawnY")) {
-                        getLogger().severe("Error: unable to find SpawnY value, please fix that issue and restart the server.");
-                        return;
-                    }
-                    String spawnY = structConfig.getString("StructureLocation.SpawnY");
-                    assert spawnY != null;
-
-                    String newSpawnY = SpawnYConversion.convertSpawnYValue(spawnY);
-
-                    // Add the new SpawnYHeightMap feature.
-                    if (newSpawnY.equals("ocean_floor")) {
-                        structConfig.set("StructureLocation.SpawnY", "top");
-                        structConfig.set("StructureLocation.SpawnYHeightMap", "OCEAN_FLOOR");
-                    } else {
-                        structConfig.set("StructureLocation.SpawnY", newSpawnY);
-                        structConfig.set("StructureLocation.SpawnYHeightMap", "WORLD_SURFACE");
-                    }
-
-                    try {
-                        structConfig.save(new File(structDir, s + ".yml"));
-                    } catch (IOException ex) {
-                        getLogger().info(String.format("An error has occurred when updating %s!", s));
-                        getLogger().severe("Error: unable to save updated structure file!");
-                        return;
-                    }
-                    getLogger().info(String.format("Successfully updated the structure: %s!", s));
-                    // Add the updated structure to the list.
-                    updatedStructures.add(s);
-                    fileConfiguration.set("UpdatedStructures", updatedStructures);
-                    fileConfiguration.save(backupdata);
-                } catch (Exception ex) {
-                    getLogger().severe(String.format("An error has occurred when updating %s:", s));
-                    ex.printStackTrace();
-                    getLogger().severe("After fixing the error, restart the server for the plugin to continue updating" +
-                                       " from where it left off.");
-                    return;
-                }
-            }
-
-            getConfig().set("configversion", 7);
-            saveConfig();
-
-            getLogger().info("Successfully updated all structure files to config version 7.");
-            getLogger().info("Please delete the backup folder that was created in the CustomStructures directory" +
-                             " after you confirm everything was updated correctly and restart the server to update to the latest config version (8).");
-        }
         // Convert to config version 8. (Only change is upper-casing File for SubSchematics)
         if (ver < 8) {
             getLogger().info("Updating all structure config files...");
@@ -556,11 +464,8 @@ public class CustomStructures extends JavaPlugin {
             // This detects if there are any loaded structures, and alerts the user if this is an error.
             if (!updatedStructures.isEmpty()) {
                 getLogger().info("Previous update attempt detected.");
-                getLogger().info(String.format("%s completed structure updates were found. If this is your first time updating" +
-                                               " to this version of CustomStructures, then please delete the backup directory and restart the server.",
-                        updatedStructures.size()));
-                getLogger().info("The server will now wait 5 seconds to give you a chance to stop the server before " +
-                                 "the update automatically continues. Press ctrl+c to cancel running the server.");
+                getLogger().info("%s completed structure updates were found. If this is your first time updating to this version of CustomStructures, then please delete the backup directory and restart the server.".formatted(updatedStructures.size()));
+                getLogger().info("The server will now wait 5 seconds to give you a chance to stop the server before the update automatically continues. Press ctrl+c to cancel running the server.");
                 try {
                     Thread.sleep(5000);
                 } catch (InterruptedException ex) {
@@ -570,7 +475,7 @@ public class CustomStructures extends JavaPlugin {
             }
 
             createBackupForFile("config.yml", "/backup/config.yml.backup");
-            for (String s : getConfig().getStringList("Structures")) {
+            for (String s : getConfig().getStringList("structures")) {
                 if (updatedStructures.contains(s)) continue;
 
                 try {
@@ -585,10 +490,9 @@ public class CustomStructures extends JavaPlugin {
                     for (String struct : structConfig.getConfigurationSection("SubSchematics.Schematics").getKeys(false)) {
                         ConfigurationSection section = structConfig.getConfigurationSection("SubSchematics.Schematics." + struct);
                         if (!section.contains("file")) {
-                            getLogger().severe(String.format("An error has occurred when attempting to update structure %s!", s));
-                            getLogger().severe(String.format("Cannot find 'file' option on %s when update the SubSchematics property!", struct));
-                            getLogger().severe("After fixing the error, restart the server for the plugin to continue updating" +
-                                               " from where it left off.");
+                            getLogger().severe("An error has occurred when attempting to update structure %s!".formatted(s));
+                            getLogger().severe("Cannot find 'file' option on %s when update the SubSchematics property!".formatted(struct));
+                            getLogger().severe("After fixing the error, restart the server for the plugin to continue updating from where it left off.");
                             return;
                         }
                         section.set("File", section.getString("file"));
@@ -598,20 +502,20 @@ public class CustomStructures extends JavaPlugin {
                     try {
                         structConfig.save(new File(structDir, s + ".yml"));
                     } catch (IOException ex) {
-                        getLogger().info(String.format("An error has occurred when updating %s!", s));
+                        getLogger().info("An error has occurred when updating %s!".formatted(s));
                         getLogger().severe("Error: unable to save updated structure file!");
                         return;
                     }
-                    getLogger().info(String.format("Successfully updated the structure: %s!", s));
+                    getLogger().info("Successfully updated the structure: %s!".formatted(s));
+
                     // Add the updated structure to the list.
                     updatedStructures.add(s);
                     fileConfiguration.set("UpdatedStructures", updatedStructures);
                     fileConfiguration.save(backupdata);
                 } catch (Exception ex) {
-                    getLogger().severe(String.format("An error has occurred when updating %s:", s));
+                    getLogger().severe("An error has occurred when updating %s:".formatted(s));
                     ex.printStackTrace();
-                    getLogger().severe("After fixing the error, restart the server for the plugin to continue updating" +
-                                       " from where it left off.");
+                    getLogger().severe("After fixing the error, restart the server for the plugin to continue updating from where it left off.");
                     return;
                 }
             }
@@ -620,15 +524,190 @@ public class CustomStructures extends JavaPlugin {
             saveConfig();
 
             getLogger().info("Successfully updated all structure files to the latest version (8).");
-            getLogger().info("Please delete the backup folder that was created in the CustomStructures directory" +
-                             " after you confirm everything was updated correctly.");
+            getLogger().info("Please delete the backup folder that was created in the CustomStructures directory after you confirm everything was updated correctly.");
+        }
+
+        // Convert to config version 9. (Masks to SourceMask, Standardize Config, Updated Loot Tables)
+        if (ver < 9) {
+            getLogger().info("Updating all structure config files...");
+
+            File structDir = new File(getDataFolder(), "structures");
+            if (!structDir.exists() && !structDir.isDirectory()) {
+                getLogger().severe("An error occurred when trying to update the structure format: Unable to find structure directory! Does it exist?");
+                return;
+            }
+
+            File backupDirectory = new File(getDataFolder(), "backup");
+            File backupData = new File(backupDirectory, ".backups");
+            if (!backupDirectory.exists()) {
+                if (!backupDirectory.mkdir()) {
+                    getLogger().severe("Error: Unable to create backup directory!");
+                    return;
+                }
+            }
+
+            if (!backupData.exists()) {
+                try {
+                    backupData.createNewFile();
+                } catch (IOException ex) {
+                    getLogger().severe("Error: Unable to create backup file.");
+                    return;
+                }
+            }
+
+            FileConfiguration fileConfiguration = YamlConfiguration.loadConfiguration(backupData);
+
+            if (fileConfiguration.contains("backupVer")) {
+                int backupVer = fileConfiguration.getInt("backupVer");
+                if (backupVer != 9) {
+                    Bukkit.getConsoleSender().sendMessage(ChatColor.RED + "===============[CUSTOM STRUCTURES UPDATE]===============" + ChatColor.RESET);
+                    getLogger().severe("Unable to update plugin! Backup data is outdated!");
+                    getLogger().severe("Please delete the backup folder in the CustomStructures directory before continuing!");
+                    Bukkit.getConsoleSender().sendMessage(ChatColor.RED + "===============[CUSTOM STRUCTURES UPDATE]===============" + ChatColor.RESET);
+                    return;
+                }
+            } else {
+                fileConfiguration.set("backupVer", 9);
+                try {
+                    fileConfiguration.save(backupData);
+                } catch (IOException ex) {
+                    getLogger().severe("A critical error has occurred while backing up the plugin data.");
+                    return;
+                }
+            }
+
+            // Check if the updates were finished.
+            if (!fileConfiguration.getBoolean("finishedStructureUpdates", false)) {
+                List<String> updatedStructures = new ArrayList<>(fileConfiguration.getStringList("UpdatedStructures"));
+
+                // This detects if there are any loaded structures, and alerts the user if this is an error.
+                if (!updatedStructures.isEmpty()) {
+                    getLogger().info("Previous update attempt detected.");
+                    getLogger().info("%s completed structure updates were found. If this is your first time updating to this version of CustomStructures, then please delete the backup directory and restart the server.".formatted(updatedStructures.size()));
+                    getLogger().info("The server will now wait 5 seconds to give you a chance to stop the server before the update automatically continues. Press ctrl+c to cancel running the server.");
+                    try {
+                        Thread.sleep(5000);
+                    } catch (InterruptedException ex) {
+                        getLogger().info("Server shutdown detected. Stopping update.");
+                        return;
+                    }
+                }
+
+                createBackupForFile("config.yml", "/backup/config.yml.backup");
+                for (String s : getConfig().getStringList("structures")) {
+                    if (updatedStructures.contains(s)) continue;
+
+                    try {
+                        createBackupForFile("/structures/" + s + ".yml", "/backup/" + s + ".yml.backup");
+
+                        FileConfiguration structConfig = YamlConfiguration.loadConfiguration(new File(structDir, s + ".yml"));
+
+                        CSUtils.renameConfigString(structConfig, "schematic", "Schematic");
+                        CSUtils.renameConfigString(structConfig, "compiled_schematic", "CompiledSchematic");
+
+                        CSUtils.renameConfigInteger(structConfig, "Chance.Number", "Probability.Numerator");
+                        CSUtils.renameConfigInteger(structConfig, "Chance.OutOf", "Probability.Denominator");
+                        structConfig.set("Chance", null);
+
+                        CSUtils.renameConfigInteger(structConfig, "StructureLocation.spawn_distance.x", "StructureLocation.SpawnDistance.x");
+                        CSUtils.renameConfigInteger(structConfig, "StructureLocation.spawn_distance.z", "StructureLocation.SpawnDistance.z");
+                        structConfig.set("StructureLocation.spawn_distance", null);
+
+                        // Structure Properties
+                        CSUtils.renameConfigBoolean(structConfig, "StructureProperties.randomRotation", "StructureProperties.RandomRotation");
+                        CSUtils.renameConfigBoolean(structConfig, "StructureProperties.ignorePlants", "StructureProperties.IgnorePlants");
+                        CSUtils.renameConfigBoolean(structConfig, "StructureProperties.spawnInWater", "StructureProperties.SpawnInWater");
+                        CSUtils.renameConfigBoolean(structConfig, "StructureProperties.spawnInLavaLakes", "StructureProperties.SpawnInLavaLakes");
+                        CSUtils.renameConfigBoolean(structConfig, "StructureProperties.spawnInVoid", "StructureProperties.SpawnInVoid");
+                        CSUtils.renameConfigBoolean(structConfig, "StructureProperties.ignoreWater", "StructureProperties.IgnoreWater");
+
+                        // Structure Limitations
+                        CSUtils.renameConfigStringList(structConfig, "StructureLimitations.whitelistSpawnBlocks", "StructureLimitations.WhitelistSpawnBlocks");
+                        CSUtils.renameConfigStringList(structConfig, "StructureLimitations.blacklistSpawnBlocks", "StructureLimitations.BlacklistSpawnBlocks");
+                        CSUtils.renameConfigString(structConfig, "StructureLimitations.BlockLevelLimit.mode", "StructureLimitations.BlockLevelLimit.Mode");
+                        CSUtils.renameConfigInteger(structConfig, "StructureLimitations.BlockLevelLimit.cornerOne.x", "StructureLimitations.BlockLevelLimit.CornerOne.x");
+                        CSUtils.renameConfigInteger(structConfig, "StructureLimitations.BlockLevelLimit.cornerOne.z", "StructureLimitations.BlockLevelLimit.CornerOne.z");
+                        CSUtils.renameConfigInteger(structConfig, "StructureLimitations.BlockLevelLimit.cornerTwo.x", "StructureLimitations.BlockLevelLimit.CornerTwo.x");
+                        CSUtils.renameConfigInteger(structConfig, "StructureLimitations.BlockLevelLimit.cornerTwo.z", "StructureLimitations.BlockLevelLimit.CornerTwo.z");
+                        CSUtils.renameConfigInteger(structConfig, "StructureLimitations.BlockLevelLimit.error", "StructureLimitations.BlockLevelLimit.Error");
+                        structConfig.set("StructureLimitations.BlockLevelLimit.cornerOne", null);
+                        structConfig.set("StructureLimitations.BlockLevelLimit.cornerTwo", null);
+                        CSUtils.renameStringConfigurationSection(structConfig, "StructureLimitations.replacement_blocks", "StructureLimitations.ReplaceBlocks");
+                        CSUtils.renameConfigInteger(structConfig, "StructureLimitations.replacement_blocks_delay", "StructureLimitations.ReplaceBlockDelay");
+                        CSUtils.renameConfigInteger(structConfig, "StructureLimitations.iterationLimit", "StructureLimitations.IterationLimit");
+
+                        // Update SubSchematics
+                        if (structConfig.contains("SubSchematics")) {
+                            if (!structConfig.getBoolean("SubSchematics.Enabled", true) || structConfig.getConfigurationSection("SubSchematics.Schematics") == null) {
+                                structConfig.set("SubSchematics", null);
+                            } else {
+                                structConfig.set("SubSchematics.Enabled", null);
+                                for (String key : structConfig.getConfigurationSection("SubSchematics.Schematics").getKeys(false)) {
+                                    ConfigurationSection section = structConfig.getConfigurationSection("SubSchematics.Schematics." + key);
+                                    structConfig.set("SubSchematics." + key, section);
+                                }
+                                structConfig.set("SubSchematics.Schematics", null);
+                            }
+                        }
+
+                        /*
+
+                         Update Masks
+
+                        */
+
+                        if (structConfig.contains("Masks")) {
+                            structConfig.set("SourceMask.Enabled", structConfig.getBoolean("Masks.enabled"));
+                            structConfig.set("SourceMask.UnionType", structConfig.getString("Masks.union_type"));
+                            structConfig.set("SourceMask.BlockTypeMask", structConfig.getStringList("Masks.BlockTypeMask"));
+                            structConfig.set("SourceMask.NegatedBlockMask", structConfig.getStringList("Masks.NegatedBlockMask"));
+                            structConfig.set("Masks", null);
+                        }
+
+                        try {
+                            structConfig.save(new File(structDir, s + ".yml"));
+                        } catch (IOException ex) {
+                            getLogger().info("An error has occurred when updating %s!".formatted(s));
+                            getLogger().severe("Error: unable to save updated structure file!");
+                            return;
+                        }
+
+                        getLogger().info("Successfully updated the structure: %s!".formatted(s));
+
+                        // Add the updated structure to the list.
+                        updatedStructures.add(s);
+                        fileConfiguration.set("UpdatedStructures", updatedStructures);
+                        fileConfiguration.save(backupData);
+                    } catch (Exception ex) {
+                        getLogger().severe("An error has occurred when updating %s.".formatted(s));
+                        ex.printStackTrace();
+                        getLogger().severe("After fixing the error, restart the server for the plugin to continue updating from where it left off.");
+                        return;
+                    }
+                }
+
+                fileConfiguration.set("finishedStructureUpdates", true);
+                try {
+                    fileConfiguration.save(backupData);
+                } catch (IOException ex) {
+                    getLogger().severe("An error has occurred when trying to save the backup file!");
+                    ex.printStackTrace();
+                    getLogger().severe("After fixing the error, restart the server for the plugin to continue updating from where it left off.");
+                }
+            }
+
+            getConfig().set("configversion", 9);
+            saveConfig();
+
+            getLogger().info("Successfully updated all structure files to the latest version (9).");
+            getLogger().info("Please delete the backup folder that was created in the CustomStructures directory after you confirm everything was updated correctly.");
         }
     }
 
     /**
      * Create a backup of a certain file.
      *
-     * @param file       The file to backup
+     * @param file       The file to be backup
      * @param backupFile The location for the backup file.
      * @return If the backup was successful.
      */
@@ -639,10 +718,8 @@ public class CustomStructures extends JavaPlugin {
             configBackup.createNewFile();
             FileUtils.copyFile(config, configBackup);
         } catch (IOException ex) {
-            getLogger().severe("A critical error was encountered when attempting to update plugin configuration" +
-                               " files!");
+            getLogger().severe("A critical error was encountered when attempting to update plugin configuration files!");
             getLogger().severe("Unable to create a backup for " + file);
-
             return false;
         }
 
@@ -688,6 +765,15 @@ public class CustomStructures extends JavaPlugin {
      */
     public AddonHandler getAddonHandler() {
         return addonHandler;
+    }
+
+    /**
+     * Get the handler for registering custom structure signs.
+     *
+     * @return The handler for registering custom structure signs.
+     */
+    public StructureSignHandler getStructureSignHandler() {
+        return structureSignHandler;
     }
 
     /**
