@@ -1,10 +1,11 @@
 package com.ryandw11.structure.utils;
 
 import com.ryandw11.structure.CustomStructures;
-import com.ryandw11.structure.SchematicHandler;
 import com.ryandw11.structure.api.structaddon.StructureSection;
 import com.ryandw11.structure.exceptions.StructureConfigurationException;
 import com.ryandw11.structure.ignoreblocks.IgnoreBlocks;
+import com.ryandw11.structure.schematic.SchematicHandler;
+import com.ryandw11.structure.structure.PriorityStructureQueue;
 import com.ryandw11.structure.structure.Structure;
 import com.ryandw11.structure.structure.StructureHandler;
 import com.ryandw11.structure.structure.properties.BlockLevelLimit;
@@ -17,6 +18,7 @@ import org.bukkit.scheduler.BukkitRunnable;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.IOException;
+import java.util.Objects;
 
 /**
  * This class prevents the server from crashing when it attempts to pick a
@@ -31,42 +33,44 @@ public class StructurePicker extends BukkitRunnable {
 
     private final CustomStructures plugin;
 
-    private int currentStructure;
-    private final StructureHandler structureHandler;
+    private final PriorityStructureQueue priorityStructureQueue;
     private final IgnoreBlocks ignoreBlocks;
 
     private final Block bl;
     private final Chunk ch;
+
     // Variable that contains the structureBlock of the current structure being processed.
     private Block structureBlock;
 
     public StructurePicker(@Nullable Block bl, Chunk ch, CustomStructures plugin) {
         this.plugin = plugin;
-        currentStructure = -1;
         this.bl = bl;
         this.ch = ch;
-        this.structureHandler = plugin.getStructureHandler();
         this.ignoreBlocks = plugin.getBlockIgnoreManager();
 
-        if (this.structureHandler == null) {
+        StructureHandler structureHandler = plugin.getStructureHandler();
+        if (structureHandler == null) {
             plugin.getLogger().warning("A structure is trying to spawn without the plugin initialization step being completed.");
             plugin.getLogger().warning("If you are using a fork of Spigot, this likely means that the fork does not adhere to the API standard properly.");
             throw new RuntimeException("Plugin Not Initialized.");
         }
+
+        priorityStructureQueue = new PriorityStructureQueue(structureHandler.getStructures(), Objects.requireNonNull(bl), ch);
     }
 
     @Override
     public void run() {
+        Structure gStructure = null;
         try {
-            currentStructure++;
-            if (currentStructure >= structureHandler.getStructures().size()) {
+            if (!priorityStructureQueue.hasNextStructure()) {
                 this.cancel();
                 return;
             }
 
-            Structure structure = structureHandler.getStructure(currentStructure);
+            gStructure = priorityStructureQueue.getNextStructure();
+            Structure structure = gStructure;
+            assert structure != null;
             StructureYSpawning structureSpawnSettings = structure.getStructureLocation().getSpawnSettings();
-
 
             // Get the highest block according to the settings for the structure.
             structureBlock = structureSpawnSettings.getHighestBlock(bl.getLocation());
@@ -76,25 +80,22 @@ public class StructurePicker extends BukkitRunnable {
                 structureBlock = null;
             }
 
-            // Calculate the chance.
-            if (!structure.canSpawn(structureBlock, ch))
-                return;
-
             // If the block is null, Skip the other steps and spawn.
             if (structureBlock == null) {
                 structureBlock = ch.getBlock(8, structureSpawnSettings.getHeight(null), 8);
                 // Now to finally paste the schematic
-                SchematicHandler sh = new SchematicHandler();
                 plugin.getServer().getScheduler().scheduleSyncDelayedTask(plugin, () -> {
                     // It is assumed at this point that the structure has been spawned.
                     // Add it to the list of spawned structures.
                     plugin.getStructureHandler().putSpawnedStructure(structureBlock.getLocation(),
-                            structure);
+                        structure);
                     try {
-                        sh.schemHandle(structureBlock.getLocation(),
-                                structure.getSchematic(),
-                                structure.getStructureProperties().canPlaceAir(),
-                                structure);
+                        SchematicHandler.placeSchematic(
+                            structureBlock.getLocation(),
+                            structure.getSchematic(),
+                            structure.getStructureProperties().canPlaceAir(),
+                            structure
+                        );
                     } catch (IOException | WorldEditException e) {
                         e.printStackTrace();
                     }
@@ -142,8 +143,8 @@ public class StructurePicker extends BukkitRunnable {
             }
 
             // If the structure is going to be cut off by the world height limit, pick a new structure.
-            if(structure.getStructureLimitations().getWorldHeightRestriction() != -1 &&
-                    structureBlock.getLocation().getY() > ch.getWorld().getMaxHeight() - structure.getStructureLimitations().getWorldHeightRestriction())
+            if (structure.getStructureLimitations().getWorldHeightRestriction() != -1 &&
+                structureBlock.getLocation().getY() > ch.getWorld().getMaxHeight() - structure.getStructureLimitations().getWorldHeightRestriction())
                 return;
 
             // If the structure can follows block level limit.
@@ -188,10 +189,8 @@ public class StructurePicker extends BukkitRunnable {
                 try {
                     if (!section.checkStructureConditions(structure, structureBlock, ch)) return;
                 } catch (Exception ex) {
-                    plugin.getLogger().severe(String.format("[CS Addon] An error has occurred when attempting to spawn " +
-                            "the structure %s with the custom property %s!", structure.getName(), section.getName()));
-                    plugin.getLogger().severe("This is not a CustomStructures error! Please report " +
-                            "this to the developer of the addon.");
+                    plugin.getLogger().severe("[CS Addon] An error has occurred when attempting to spawn the structure %s with the custom property %s!".formatted(structure.getName(), section.getName()));
+                    plugin.getLogger().severe("This is not a CustomStructures error! Please report this to the developer of the addon.");
                     if (plugin.isDebug()) {
                         ex.printStackTrace();
                     } else {
@@ -202,35 +201,43 @@ public class StructurePicker extends BukkitRunnable {
             }
 
             // Now to finally paste the schematic
-            SchematicHandler sh = new SchematicHandler();
             plugin.getServer().getScheduler().scheduleSyncDelayedTask(plugin, () -> {
                 // It is assumed at this point that the structure has been spawned.
                 // Add it to the list of spawned structures.
                 plugin.getStructureHandler().putSpawnedStructure(structureBlock.getLocation(),
-                        structure);
+                    structure);
                 try {
-                    sh.schemHandle(structureBlock.getLocation(),
-                            structure.getSchematic(),
-                            structure.getStructureProperties().canPlaceAir(),
-                            structure);
+                    SchematicHandler.placeSchematic(
+                        structureBlock.getLocation(),
+                        structure.getSchematic(),
+                        structure.getStructureProperties().canPlaceAir(),
+                        structure
+                    );
                 } catch (IOException | WorldEditException e) {
                     e.printStackTrace();
                 }
             });
 
             this.cancel();// return after pasting
+
         } catch (StructureConfigurationException ex) {
+
             this.cancel();
-            plugin.getLogger().severe("A configuration error was encountered when attempting to spawn the structure: "
-                    + structureHandler.getStructure(currentStructure).getName());
+            if (gStructure != null) {
+                plugin.getLogger().severe("A configuration error was encountered when attempting to spawn the structure: " + gStructure.getName());
+            } else {
+                plugin.getLogger().severe("A configuration error was encountered when attempting to spawn a structure.");
+            }
             plugin.getLogger().severe(ex.getMessage());
+
         } catch (Exception ex) {
+
             this.cancel();
             plugin.getLogger().severe("An error was encountered during the schematic pasting section.");
             plugin.getLogger().severe("The task was stopped for the safety of your server!");
             plugin.getLogger().severe("For more information enable debug mode.");
-            if (plugin.isDebug())
-                ex.printStackTrace();
+            if (plugin.isDebug()) ex.printStackTrace();
+
         }
     }
 
